--- a/Background.tex
+++ b/Background.tex
@@ -218,6 +218,9 @@ where control over train movement is of greater importance.
 
 
 \subsubsection{Points}
+Junctions are formed between two tracks using  pieces of equipment called points. The wheels of the train rest on track which makes it physically impossible to just join one track to another as the train would derail.  What is needed is a device that can switch a train off of the track is needed and the point fulfils that role.  Each point can be in one of two positions depending on whether it is actively switching trains off the track which is refered to as \textbf{reverse}  or is inactive which is refered to as \textbf{normal}. The point is one of the main areas of possible danger on the railway. If a railway hits the point when it is in the wrong position i.e. from the direction of track segment $B$ to $C$ in fig \ref{fig:track} then the train will derail. There is also a serious danger posed by point moving while a train is on the junction which would also cause a derailment.
+
+\begin{comment}
 A point is a physical piece of equipment that is used to 
 form a junction. Due to the nature of the rails and trains it is not possible to physically
 to just join two segments of track. Instead a point is needed to act as
@@ -226,10 +229,13 @@ has two positions which are referred to as \textbf{normal} and
 \textbf{reverse}. This presents a safety hazard, for example see figure \ref{fig:track}, if a train enters
 the junction $B$ from $C$ when the junction is locked in the
 position for normal then the train will be derailed. 
-
+\end{comment}
 
 
 \subsection{Railway Signalling}
+Currently the main way of communicating information between the control system and the train driver is through track side signals.
+
+\begin{comment}
 Signals are the main means used to communicate information regarding the state
 of the track ahead of the train. Typically they are placed either on the track
 side or over hanging the railway. Visual indications known as aspects are used
@@ -239,7 +245,7 @@ considered in this project is the coloured light signal. Typically these have
 between one - four aspects each conveying a different indication about the state of
 the track ahead. Below is a description of the
 aspects used for a three light signal.  
-
+\end{comment}
 
 \begin{figure}[h!]
 \begin{description}
