--- a/Background.tex
+++ b/Background.tex
@@ -233,7 +233,7 @@ position for normal then the train will be derailed.
 
 
 \subsection{Railway Signalling}
-Currently the main way of communicating information between the control system and the train driver is through track side signals.
+Currently the main way of communicating information between the control system and the train driver is through track side signals. These are normally placed either on over hanging gantrees or either side of the track. These signals function by visually conveying information to the driver typically in the form of different  aspects each of which has its own particular meaning. The most important signal from the point of view of this project is the coloured light signal.
 
 \begin{comment}
 Signals are the main means used to communicate information regarding the state
