--- a/BackgroundSAT.tex
+++ b/BackgroundSAT.tex
@@ -1,8 +1,37 @@
 \chapter{Background: The Satisfiability Problem and Model Checking}
-\section{History}
+
+CNF
+
+SAT Problem
 
 \section{DPLL}
+DPLL Proof System
+
+DPLL Algorithm Example
 
 \section{Clause Learning}
+Grasp
+Chaff ZChaff
+MiniSAT
+
+Example Clause Learning Algorithm
+
+\section{Resolution}
+
+Resolution Proof System
+
+Resolution Algorithm
 
 \section{Model Checking}
+
+Kripke Structures
+
+LTL 
+
+LTL Model Checking
+
+SAT Based Model Checking
+
+Inductive Verification
+
+Bounded Model Checking
