--- a/Main.tex
+++ b/Main.tex
@@ -251,7 +251,7 @@ in candidature for the degree of Doctor of Philsophy
 \end{center}
 
 \begin{center}
-%%%includegraphics[scale=0.4]{logo} The logo file is currently missing
+\includegraphics[scale=0.4]{logo} 
 \end{center}
 
 \begin{center}
@@ -338,14 +338,17 @@ Signed:
 
 \input{Introduction.tex}
 
+\input{BackgroundLogic.tex}
+\input{EVDP.tex}
+
+\input{ECLSA.tex}
+
 
 \input{Background.tex}
 
 \input{BackgroundERTMS.tex}
 
-\input{EVDP.tex}
 
-\input{ECLSA.tex}
 
 \input{Maude.tex}
 
