--- a/lit.bib
+++ b/lit.bib
@@ -525,6 +525,20 @@
   Publisher                = {Springer-Verlag}
 }
 
+@InCollection{GG69,
+  Title                    = {Investigations into Logical Deduction},
+  Author                   = {Gerhard Gentzen},
+  Booktitle                = {Collected Papers of Gerhard Gentzen},
+  Publisher                = {Elsevier},
+  Year                     = {1969},
+  Pages                    = {68--131},
+  Series                   = {Studies in Logic and the Foundations of Mathematics},
+  Volume                   = {55},
+
+  Owner                    = {csal},
+  Timestamp                = {2014.03.11}
+}
+
 @InProceedings{AG05,
   Title                    = {Towards a formal specification of an electronic payment system},
   Author                   = {Gimblett, A. and Roggenbach, M. and Schlingloff, H.},
