--- a/BackgroundERTMS.tex
+++ b/BackgroundERTMS.tex
@@ -1,6 +1,7 @@
 \thesischapter{Background: The European Rail Traffic Management System}
+\label{chapter:ERTMS}
 
-Following the successful use of the solid state interlocking for over 30 years Railway Engineers are trying to employ modern technologies such as GPS and mobile data communications in the form of GSM radio to gain a much finer control than the tradition discrete solid state interocking and their boolean track circuits would allow. This has led to the development of the European Rail Traffic Management System (ERTMS) which combines the tradition discrete control systems of the railway with continuous systems. The name ERTMS is often used interchangeably with the name \emph{European Train Control System} (ETCS) which is used to describe the same control system but without the GSM radio component. This new system consists of a \emph{radio block processor} (RBC) which negotiates with the tradition interlocking in order to grant lenghts of track to a train in the form of a \emph{movement authority} (MA). The RBC also provides the train with a \emph{static speed profile} which restricts the speed of the train on different segments of track. The Trains are free to move along the lengths of track granted to them in the form of a MA and communicate their position, speed and requests for further segments of track over radio to the radio block processor. The ERTMS system is split into different levels of behaviour that allow for different stages of delivery. In the most advanced level 3 all trains must be equiped with the ERTMS system in order to use the tracks, earlier levels allow for a mixture of trains with and without ERTMS. The RBC communicates with trains via GSM in ERTMS level 2 and 3 and via trackside balises in level 1. The interlocking itself is not formally considered to be a part of ERTMS, however an interface to the interlocking is a key part of this system. In this thesis we are mainly concerned with the ERTMS level 2 which in a later chapter is verified as part of a combined interlocking and RBC system.
+Following the successful use of the solid state interlocking for over 30 years Railway Engineers are trying to employ modern technologies such as GPS and mobile data communications in the form of GSM radio to gain a much finer control than the tradition discrete solid state interlocking and their boolean track circuits would allow. This has led to the development of the European Rail Traffic Management System (ERTMS) which combines the tradition discrete control systems of the railway with continuous systems. The name ERTMS is often used interchangeably with the name \emph{European Train Control System} (ETCS) which is used to describe the same control system but without the GSM radio component. This new system consists of a \emph{radio block processor} (RBC) which negotiates with the tradition interlocking in order to grant lenghts of track to a train in the form of a \emph{movement authority} (MA). The RBC also provides the train with a \emph{static speed profile} which restricts the speed of the train on different segments of track. The Trains are free to move along the lengths of track granted to them in the form of a MA and communicate their position, speed and requests for further segments of track over radio to the radio block processor. The ERTMS system is split into different levels of behaviour that allow for different stages of delivery. In the most advanced level 3 all trains must be equipped with the ERTMS system in order to use the tracks, earlier levels allow for a mixture of trains with and without ERTMS. The RBC communicates with trains via GSM in ERTMS level 2 and 3 and via trackside balises in level 1. The interlocking itself is not formally considered to be a part of ERTMS, however an interface to the interlocking is a key part of this system. In this thesis we are mainly concerned with the ERTMS level 2 which in a later chapter is verified as part of a combined interlocking and RBC system.
 
 
 \section{The European Rail Traffic Management System}
