--- a/Main.tex
+++ b/Main.tex
@@ -346,8 +346,12 @@ Signed:
 
 \input{BackgroundTrad.tex}
 
-\input{BackgroundERTMS.tex}
 
+\input{BackgroundModelChecking.tex}
+
+\input{VerifyingSSI.tex}
+
+\input{BackgroundERTMS.tex}
 
 
 \input{Maude.tex}
