--- a/BackgroundERTMS.tex
+++ b/BackgroundERTMS.tex
@@ -635,7 +635,7 @@ As part of this project we will also have to formalise new safety properties for
 
 \section{Typical  ERTMS Scenario}
 
-Consider the following scenario involving 3 trains attempting to cross a double junction.
+Consider the following scenario involving 3 trains attempting to cross a double junction (See Fig \ref{fig:trackplan}).
 
 \begin{itemize}
 \item Train A would like to travel in a route from D to C
@@ -643,8 +643,7 @@ Consider the following scenario involving 3 trains attempting to cross a double 
 \item Train C would like to travel in a route from F to C
 \end{itemize}
 
-We will assume that initially no routes are set. This means that either a controller or a time table will determine the precedence of the trains. 
-For this example we will time table the trains in alphabetical order.
+We will assume that initially no routes are set. This means that either a controller or a time table will determine the precedence of the trains. For this example we will time table the trains in alphabetical order.
 
 
 
