--- a/Main.tex
+++ b/Main.tex
@@ -21,7 +21,7 @@
 \usepackage{setspace} 
 \usepackage{xspace}
 \usepackage{float}
-\usepackage{subfigure}
+\usepackage{subfig}
 \usepackage{subfloat}
 
 \usepackage{makeidx}
